PRJ_VER=1.0.6
SUMMARY=Fixed 879141
BODHI_UPDATE_TYPE=bugfix
REDHAT_BUGZILLA=879141
[Changes]
Fixed Bug 879141 - Excessive quotation mark for target tag_pre
[TODO]
